%% GENERATED by scripts/gen_state_diagrams.py -- DO NOT EDIT.
%% CI regenerates this and fails if it differs from the table.

stateDiagram-v2
    [*] --> IDLE_DAY
    IDLE_DAY --> PLANNING: NOON_TICK
    PLANNING --> ARMED: PLAN_GOOD
    PLANNING --> IDLE_DAY: PLAN_BAD
    ARMED --> PRE_FLIGHT: PRE_SUNSET_TICK
    ARMED --> IDLE_DAY: WEATHER_BAD
    PRE_FLIGHT --> OPENING_ROOF: CHECKS_PASSED / safety_armed & mount_parked & roof_state_known & weather_ok
    ARMED --> OPENING_ROOF: CHECKS_PASSED / safety_armed & mount_parked & roof_state_known & weather_ok
    IDLE_DAY --> OPENING_ROOF: CHECKS_PASSED / safety_armed & mount_parked & roof_state_known
    PRE_FLIGHT --> IDLE_DAY: CHECKS_FAILED
    PRE_FLIGHT --> IDLE_DAY: WEATHER_BAD
    OPENING_ROOF --> PRELUDE: ROOF_OPEN_CONFIRMED
    OPENING_ROOF --> FAULT_ROOF_UNKNOWN: ROOF_STALL
    OPENING_ROOF --> FAULT_ROOF_UNKNOWN: ROOF_TIMEOUT
    OPENING_ROOF --> ARMED: ROOF_FIRE_FAILED / roof_closed & slots_remaining
    OPENING_ROOF --> IDLE_DAY: ROOF_FIRE_FAILED / roof_closed & plan_exhausted
    PRELUDE --> SLOT_SETUP: NINA_PRELUDE_DONE / slots_remaining
    PRELUDE --> FLATS: NINA_PRELUDE_DONE / plan_exhausted
    SLOT_SETUP --> SLOT_IMAGING: SLOT_STARTED
    SLOT_IMAGING --> SLOT_SETUP: NINA_SLOT_DONE / slots_remaining
    SLOT_IMAGING --> PARKING: NINA_SLOT_DONE / plan_exhausted
    SLOT_IMAGING --> SLOT_SETUP: SLOT_WINDOW_END / slots_remaining
    SLOT_IMAGING --> PARKING: SLOT_WINDOW_END / plan_exhausted
    SLOT_IMAGING --> SLOT_SETUP: REPLAN_REQUESTED
    SLOT_IMAGING --> PARKING: CAPTURE_LOST
    SLOT_IMAGING --> PARKING: WEATHER_BAD
    PRELUDE --> PARKING: CAPTURE_LOST
    PARKING --> CLOSING_ROOF: MOUNT_PARK_CONFIRMED / mount_parked & roof_state_known
    PARKING --> FAULT_ROOF_UNKNOWN: VISION_CONTRADICTION
    CLOSING_ROOF --> FLATS: ROOF_CLOSE_CONFIRMED
    CLOSING_ROOF --> FAULT_ROOF_UNKNOWN: ROOF_STALL
    CLOSING_ROOF --> FAULT_ROOF_UNKNOWN: ROOF_TIMEOUT
    CLOSING_ROOF --> PARKING: ROOF_FIRE_FAILED / roof_open
    FLATS --> SHUTDOWN: NINA_FLATS_DONE
    FLATS --> SHUTDOWN: CAPTURE_LOST
    SHUTDOWN --> NIGHT_DONE: SHUTDOWN_DONE
    NIGHT_DONE --> IDLE_DAY: DAY_TICK
    PRELUDE --> PARKING: NIGHT_END_REQUESTED
    SLOT_SETUP --> PARKING: NIGHT_END_REQUESTED
    SLOT_IMAGING --> PARKING: NIGHT_END_REQUESTED
    FLATS --> SHUTDOWN: NIGHT_END_REQUESTED
    IDLE_DAY --> FAULT_ROOF_UNKNOWN: VISION_CONTRADICTION
    ARMED --> FAULT_ROOF_UNKNOWN: VISION_CONTRADICTION
    NIGHT_DONE --> FAULT_ROOF_UNKNOWN: VISION_CONTRADICTION
    PRELUDE --> FAULT_ROOF_UNKNOWN: VISION_CONTRADICTION
    SLOT_SETUP --> FAULT_ROOF_UNKNOWN: VISION_CONTRADICTION
    SLOT_IMAGING --> FAULT_ROOF_UNKNOWN: VISION_CONTRADICTION
    FLATS --> FAULT_ROOF_UNKNOWN: VISION_CONTRADICTION
    IDLE_DAY --> MANUAL_OPENING: ROOF_OPEN_REQUESTED / safety_armed & mount_parked & roof_state_known
    ARMED --> MANUAL_OPENING: ROOF_OPEN_REQUESTED / safety_armed & mount_parked & roof_state_known
    NIGHT_DONE --> MANUAL_OPENING: ROOF_OPEN_REQUESTED / safety_armed & mount_parked & roof_state_known
    MANUAL_OPENING --> MANUAL_OPEN: ROOF_OPEN_CONFIRMED
    MANUAL_OPENING --> FAULT_ROOF_UNKNOWN: ROOF_STALL
    MANUAL_OPENING --> FAULT_ROOF_UNKNOWN: ROOF_TIMEOUT
    MANUAL_OPENING --> ARMED: ROOF_FIRE_FAILED / roof_closed & slots_remaining
    MANUAL_OPENING --> IDLE_DAY: ROOF_FIRE_FAILED / roof_closed & plan_exhausted
    MANUAL_OPEN --> MANUAL_CLOSING: ROOF_CLOSE_REQUESTED / mount_parked & roof_state_known
    MANUAL_OPEN --> FAULT_ROOF_UNKNOWN: VISION_CONTRADICTION
    IDLE_DAY --> MANUAL_CLOSING: ROOF_CLOSE_REQUESTED / mount_parked & roof_state_known
    ARMED --> MANUAL_CLOSING: ROOF_CLOSE_REQUESTED / mount_parked & roof_state_known
    NIGHT_DONE --> MANUAL_CLOSING: ROOF_CLOSE_REQUESTED / mount_parked & roof_state_known
    MANUAL_CLOSING --> ARMED: ROOF_CLOSE_CONFIRMED / slots_remaining
    MANUAL_CLOSING --> IDLE_DAY: ROOF_CLOSE_CONFIRMED / plan_exhausted
    MANUAL_CLOSING --> FAULT_ROOF_UNKNOWN: ROOF_STALL
    MANUAL_CLOSING --> FAULT_ROOF_UNKNOWN: ROOF_TIMEOUT
    MANUAL_CLOSING --> MANUAL_OPEN: ROOF_FIRE_FAILED / roof_open
    PRELUDE --> PRELUDE: MOUNT_MOVE_REQUESTED / roof_open
    SLOT_SETUP --> SLOT_SETUP: MOUNT_MOVE_REQUESTED / roof_open
    SLOT_IMAGING --> SLOT_IMAGING: MOUNT_MOVE_REQUESTED / roof_open
    PARKING --> PARKING: MOUNT_MOVE_REQUESTED / roof_open
    MANUAL_OPEN --> MANUAL_OPEN: MOUNT_MOVE_REQUESTED / roof_open
    PRELUDE --> PRELUDE: MOUNT_POWER_REQUESTED / roof_open
    SLOT_SETUP --> SLOT_SETUP: MOUNT_POWER_REQUESTED / roof_open
    SLOT_IMAGING --> SLOT_IMAGING: MOUNT_POWER_REQUESTED / roof_open
    PARKING --> PARKING: MOUNT_POWER_REQUESTED / roof_open
    MANUAL_OPEN --> MANUAL_OPEN: MOUNT_POWER_REQUESTED / roof_open
    IDLE_DAY --> IDLE_DAY: MOUNT_POWER_REQUESTED / mount_parked & roof_closed
    ARMED --> ARMED: MOUNT_POWER_REQUESTED / mount_parked & roof_closed
    NIGHT_DONE --> NIGHT_DONE: MOUNT_POWER_REQUESTED / mount_parked & roof_closed
    FLATS --> FLATS: MOUNT_POWER_REQUESTED / mount_parked & roof_closed
    note left of SAFE_HOLD: from any non-hold state on SAFETY_CLEARED
    SAFE_HOLD --> IDLE_DAY: SAFETY_ARMED
    note left of ESTOP: from any non-hold state on ESTOP_REQUESTED
    FAULT_ROOF_UNKNOWN --> IDLE_DAY: OPERATOR_RESOLVE
    ESTOP --> IDLE_DAY: OPERATOR_RESOLVE
    note right of ESTOP: HOLD -- operator exit only
    note right of FAULT_ROOF_UNKNOWN: HOLD -- operator exit only
    note right of SAFE_HOLD: HOLD -- operator exit only
